forge/tests/error/froglet-is-linear1.frg
#lang froglet
option run_sterling off

sig Node {
    next: lone Node
}

check {} for { Node is linear }

